# cocoa

./: AppDelegate.h  Hello.m  a.out  info.plist  static_triangle.m
BlankWindow/: .clang-format  AppDelegate.m  CMakeLists.txt  main.m
BlankWindow.xcodeproj/: project.pbxproj
BlankWindow/include/: AppDelegate.h  MyWindowDelegate.h
BlankWindow/src/: AppDelegate.m  MyWindowDelegate.m  main.m
bluescreen/src/: appdelegate.mm  openglview.mm
metal/: ;  a.out  blue  compile_commands.json  main.cpp  makefile  test.cpp
metal/metal-cpp/AppKit/: AppKitPrivate.hpp  NSOpenGLView.hpp  NSWindow.hpp
metal/metal-cpp/Foundation/: NSPrivate.hpp
model/: car.blend  car.blend1  car.mtl  cube.mtl  load  load.c
model/include/: load.h
model/src/: load.cpp  openglview.mm
porsche/: CMakeLists.txt
porsche/include/: appdelegate.h  bridge.h  car.h  openglview.h
porsche/src/: appdelegate.mm  car.cpp  glm.cpp  main.mm  openglview.mm
sphere/src/: openglview.mm
template/src/: openglview.mm
